All layouts changed to constraint layouts and added sliders for responsive design

--- a/app/src/main/res/layout/activity_dashboard.xml
+++ b/app/src/main/res/layout/activity_dashboard.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools = "http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,104 +12,125 @@
     tools:context = ".Dashboard">
 
 
-    <Button
-        android:id="@+id/button5"
-        android:layout_width="150dp"
-        android:layout_height="132dp"
-        android:layout_below="@+id/dashboard_Title"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="209dp"
-        android:layout_marginLeft="209dp"
-        android:layout_marginTop="373dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginRight="36dp"
-        android:background="@color/colorRed"
-        android:drawableTop="@drawable/notifications"
-        android:text="Notifications"
-        android:textColor="@color/colorWhite"
-        android:textSize="18sp" />
-
-    <Button
-        android:id="@+id/button4"
-        android:layout_width="wrap_content"
-        android:layout_height="128dp"
-        android:layout_below="@+id/dashboard_Title"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
-        android:layout_marginTop="376dp"
-        android:layout_marginEnd="203dp"
-        android:layout_marginRight="203dp"
-        android:background="@color/colorRed"
-        android:drawableTop="@drawable/icon_statistics"
-        android:text="Statistics"
-        android:textColor="@color/colorWhite"
-        android:textSize="18sp" />
-
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="126dp"
-        android:layout_height="106dp"
+        android:layout_width="129dp"
+        android:layout_height="130dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginEnd="22dp"
-        android:layout_marginRight="22dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="12dp"
+        android:contentDescription="@string/dashboard_logo"
+        app:layout_constraintStart_toEndOf="@+id/dashboard_Title"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/logo" />
 
     <TextView
         android:id="@+id/dashboard_Title"
-        android:layout_width="181dp"
-        android:layout_height="49dp"
+        android:layout_width="155dp"
+        android:layout_height="42dp"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="65dp"
-        android:text="Dashboard"
+        android:layout_marginStart="24dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginTop="88dp"
+        android:text="@string/dashboard_heading"
         android:textColor="@color/colorWhite"
-        android:textSize="@dimen/form_font_size_heading" />
+        android:textSize="@dimen/form_font_size_heading"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="299dp"
-        android:layout_height="101dp"
+        android:layout_width="300dp"
+        android:layout_height="105dp"
         android:layout_below="@+id/dashboard_Title"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="51dp"
-        android:layout_marginLeft="51dp"
-        android:layout_marginTop="75dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="40dp"
         android:layout_marginEnd="45dp"
         android:layout_marginRight="45dp"
         android:background="@color/colorRed"
+        android:drawableStart="@drawable/heart"
         android:drawableLeft="@drawable/heart"
-        android:text="Profile"
+        android:text="@string/dashboard_button_profile"
         android:textColor="@color/colorWhite"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dashboard_Title" />
 
     <Button
         android:id="@+id/button3"
-        android:layout_width="302dp"
-        android:layout_height="102dp"
+        android:layout_width="300dp"
+        android:layout_height="105dp"
         android:layout_below="@+id/dashboard_Title"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
-        android:layout_marginStart="48dp"
-        android:layout_marginLeft="48dp"
-        android:layout_marginTop="225dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="45dp"
         android:layout_marginRight="45dp"
         android:background="@color/colorRed"
         android:drawableLeft="@drawable/icon_subjects"
-        android:text="Subjects"
+        android:text="@string/dashboard_button_subjects"
         android:textColor="@color/colorWhite"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="140dp"
+        android:layout_height="105dp"
+        android:layout_below="@+id/dashboard_Title"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="45dp"
+        android:layout_marginLeft="45dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginRight="15dp"
+        android:background="@color/colorRed"
+        android:drawableTop="@drawable/icon_statistics"
+        android:text="@string/dashboard_button_statistics"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@+id/button5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="140dp"
+        android:layout_height="105dp"
+        android:layout_below="@+id/dashboard_Title"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
+        android:background="@color/colorRed"
+        android:drawableTop="@drawable/notifications"
+        android:text="@string/dashboard_button_notifications"
+        android:textColor="@color/colorWhite"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/button4"
+        app:layout_constraintTop_toBottomOf="@+id/button3" />
+
+</android.support.constraint.ConstraintLayout>
