--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -1,11 +1,153 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+<android.support.constraint.ConstraintLayout
+    xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools = "http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height = "match_parent"
+    android:paddingLeft= "@dimen/activity_horizontal_margin"
+    android:paddingRight = "@dimen/activity_horizontal_margin"
+    android:paddingTop = "@dimen/activity_vertical_margin"
+    android:paddingBottom = "@dimen/activity_vertical_margin"
+    android:background="@drawable/background_nobar"
+    tools:context = ".notifications">
 
-    <TextView
-        android:layout_width="fill_parent"
-        android:layout_height="400dp"
-        android:text="Hi, Your Detailed notification view goes here...." />
-</LinearLayout>
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <Button
+                android:id="@+id/create_btn_Register"
+                android:layout_width="178dp"
+                android:layout_height="55dp"
+                android:layout_below="@+id/create_Password"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentEnd="true"
+                android:layout_alignParentRight="true"
+                android:layout_marginStart="75dp"
+                android:layout_marginLeft="75dp"
+                android:layout_marginTop="44dp"
+
+                android:layout_marginBottom="32dp"
+                android:background="@color/colorRed"
+                android:text="@string/login_button_register"
+                android:textColor="@color/colorWhite"
+                android:textSize="24sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/create_Password" />
+
+            <EditText
+                android:id="@+id/create_acc_fullName"
+                android:layout_width="330dp"
+                android:layout_height="64dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="false"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/colorWhite"
+                android:ems="10"
+                android:hint="@string/create_fullname_hint"
+                android:inputType="text"
+                android:textSize="@dimen/form_font_size"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/create_acc_Birthday"
+                android:layout_width="330dp"
+                android:layout_height="64dp"
+                android:layout_below="@+id/create_acc_Email"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="24dp"
+                android:background="@color/colorWhite"
+                android:ems="10"
+                android:hint="@string/create_birthday_hint"
+                android:inputType="date"
+                android:textSize="@dimen/form_font_size"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/create_acc_ADDRESS"
+                tools:text="Birthday" />
+
+            <EditText
+                android:id="@+id/create_acc_Email"
+                android:layout_width="330dp"
+                android:layout_height="64dp"
+                android:layout_below="@+id/create_acc_fullName"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="28dp"
+                android:background="@color/colorWhite"
+                android:ems="10"
+                android:hint="@string/create_email_hint"
+                android:inputType="textEmailAddress"
+                android:textSize="@dimen/form_font_size"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/create_acc_fullName"
+                tools:text="Email" />
+
+            <EditText
+                android:id="@+id/create_acc_ADDRESS"
+                android:layout_width="330dp"
+                android:layout_height="64dp"
+                android:layout_below="@+id/create_acc_Birthday"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="28dp"
+                android:background="@color/colorWhite"
+                android:ems="10"
+                android:hint="@string/create_address_hint"
+                android:inputType="textPostalAddress"
+                android:textSize="@dimen/form_font_size"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/create_acc_Email"
+                tools:text="Address" />
+
+            <EditText
+                android:id="@+id/create_Password"
+                android:layout_width="330dp"
+                android:layout_height="64dp"
+                android:layout_below="@+id/create_acc_ADDRESS"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="20dp"
+                android:background="@color/colorWhite"
+                android:ems="10"
+                android:hint="@string/create_password_hint1"
+                android:inputType="textPassword"
+                android:textSize="@dimen/form_font_size"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/create_acc_Birthday"
+                tools:text="Password" />
+        </android.support.constraint.ConstraintLayout>
+    </ScrollView>
+
+</android.support.constraint.ConstraintLayout>
