--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -29,30 +29,33 @@
 
             <Button
                 android:id="@+id/create_btn_Register"
-                android:layout_width="331dp"
+                android:layout_width="320dp"
                 android:layout_height="60dp"
                 android:layout_below="@+id/create_Password"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="24dp"
 
-                android:layout_marginLeft="16dp"
+                android:layout_marginLeft="24dp"
                 android:layout_marginTop="32dp"
+                android:layout_marginEnd="24dp"
+                android:layout_marginRight="24dp"
                 android:layout_marginBottom="32dp"
-                android:background="@color/colorRed"
+                android:background="@drawable/textview_red_noborder"
                 android:text="@string/create_button_continue"
                 android:textColor="@color/colorWhite"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/create_disclaimer"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintVertical_bias="1.0" />
 
             <EditText
                 android:id="@+id/create_acc_fullName"
-                android:layout_width="330dp"
+                android:layout_width="320dp"
                 android:layout_height="64dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="false"
@@ -60,17 +63,20 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/colorWhite"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
                 android:ems="10"
                 android:hint="@string/create_fullname_hint"
                 android:inputType="text"
                 android:textSize="@dimen/form_font_size"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
                 android:id="@+id/create_acc_Birthday"
-                android:layout_width="330dp"
+                android:layout_width="320dp"
                 android:layout_height="64dp"
                 android:layout_below="@+id/create_acc_Email"
                 android:layout_alignParentStart="true"
@@ -78,67 +84,100 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginTop="24dp"
-                android:background="@color/colorWhite"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
                 android:ems="10"
                 android:hint="@string/create_birthday_hint"
                 android:inputType="date"
                 android:textSize="@dimen/form_font_size"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/create_acc_ADDRESS" />
 
             <EditText
                 android:id="@+id/create_acc_Email"
-                android:layout_width="330dp"
+                android:layout_width="320dp"
                 android:layout_height="64dp"
                 android:layout_below="@+id/create_acc_fullName"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="28dp"
-                android:background="@color/colorWhite"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
                 android:ems="10"
                 android:hint="@string/create_email_hint"
                 android:inputType="textEmailAddress"
                 android:textSize="@dimen/form_font_size"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/create_acc_fullName" />
 
             <EditText
                 android:id="@+id/create_acc_ADDRESS"
-                android:layout_width="330dp"
+                android:layout_width="320dp"
                 android:layout_height="64dp"
                 android:layout_below="@+id/create_acc_Birthday"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="28dp"
-                android:background="@color/colorWhite"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
                 android:ems="10"
                 android:hint="@string/create_address_hint"
                 android:inputType="textPostalAddress"
                 android:textSize="@dimen/form_font_size"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/create_acc_Email" />
 
             <EditText
                 android:id="@+id/create_Password"
-                android:layout_width="330dp"
+                android:layout_width="320dp"
                 android:layout_height="64dp"
                 android:layout_below="@+id/create_acc_ADDRESS"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
                 android:layout_marginStart="16dp"
                 android:layout_marginLeft="16dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/colorWhite"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
                 android:ems="10"
                 android:hint="@string/create_password_hint1"
                 android:inputType="textPassword"
                 android:textSize="@dimen/form_font_size"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/create_acc_Birthday" />
+
+            <EditText
+                android:id="@+id/create_Password2"
+                android:layout_width="320dp"
+                android:layout_height="64dp"
+                android:layout_below="@+id/create_acc_ADDRESS"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
+                android:ems="10"
+                android:hint="@string/create_password_hint2"
+                android:inputType="textPassword"
+                android:textSize="@dimen/form_font_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/create_Password" />
 
             <TextView
                 android:id="@+id/create_disclaimer"
@@ -146,14 +185,17 @@
                 android:layout_height="70dp"
                 android:layout_centerInParent="true"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="45dp"
-                android:layout_marginLeft="45dp"
+                android:layout_marginStart="50dp"
+                android:layout_marginLeft="50dp"
                 android:layout_marginTop="24dp"
+                android:layout_marginEnd="50dp"
+                android:layout_marginRight="50dp"
                 android:gravity="center"
                 android:text="@string/create_disclaimer"
                 android:textColor="@color/colorBlack"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/create_Password" />
+                app:layout_constraintTop_toBottomOf="@+id/create_Password2" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 
