--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -47,7 +47,7 @@
 
             <EditText
                 android:id="@+id/login_email"
-                android:layout_width="330dp"
+                android:layout_width="320dp"
                 android:layout_height="64dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
@@ -57,7 +57,7 @@
                 android:layout_marginTop="96dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:background="@color/colorWhite"
+                android:background="@drawable/textview_border"
                 android:ems="10"
                 android:hint="@string/login_prompt_email"
                 android:inputType="textEmailAddress"
@@ -69,7 +69,7 @@
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="200dp"
+                android:layout_width="320dp"
                 android:layout_height="50dp"
                 android:layout_below="@+id/login_btn_login"
                 android:layout_alignParentStart="true"
@@ -114,7 +114,7 @@
 
             <EditText
                 android:id="@+id/login_password"
-                android:layout_width="330dp"
+                android:layout_width="320dp"
                 android:layout_height="64dp"
                 android:layout_below="@+id/login_email"
                 android:layout_alignParentStart="true"
@@ -124,7 +124,7 @@
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:background="@color/colorWhite"
+                android:background="@drawable/textview_border"
                 android:ems="10"
                 android:hint="@string/login_prompt_password"
                 android:inputType="textPassword"
@@ -134,7 +134,7 @@
 
             <Button
                 android:id="@+id/login_btn_login"
-                android:layout_width="200dp"
+                android:layout_width="320dp"
                 android:layout_height="50dp"
                 android:layout_below="@+id/login_password"
                 android:layout_alignParentStart="true"
@@ -146,10 +146,10 @@
                 android:layout_marginTop="80dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:background="@color/colorRed"
+                android:background="@drawable/textview_red_noborder"
                 android:text="@string/login_button_login"
                 android:textColor="@color/colorWhite"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.497"
                 app:layout_constraintStart_toStartOf="parent"
