--- a/app/src/main/res/layout/activity_notifications.xml
+++ b/app/src/main/res/layout/activity_notifications.xml
@@ -10,6 +10,7 @@
     android:paddingTop = "@dimen/activity_vertical_margin"
     android:paddingBottom = "@dimen/activity_vertical_margin"
     android:background="@drawable/background_nobar"
+    android:id="@+id/notification_main_layout"
     tools:context = ".notifications">
 
     <ScrollView
