--- a/app/src/main/res/layout/notification_popup.xml
+++ b/app/src/main/res/layout/notification_popup.xml
@@ -5,7 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fadingEdge="horizontal|vertical"
-    android:scrollbars="vertical">
+    android:scrollbars="vertical"
+    android:background="@drawable/textview_border"
+    android:id="@+id/notification_popUp_layout"
+    >
 
     <ScrollView
         android:id="@+id/scrollView3"
@@ -22,145 +25,164 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="1080dp">
+            android:minHeight="700dp">
 
             <EditText
-                android:id="@+id/startDate"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginLeft="100dp"
+                android:id="@+id/notification_Name"
+                android:layout_width="260dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="false"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="100dp"
-                android:layout_marginRight="100dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
                 android:ems="10"
+                android:hint="@string/notification_name"
+                android:inputType="text"
+                android:textSize="@dimen/form_font_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/notification_createNote" />
+
+            <EditText
+                android:id="@+id/notification_frequency"
+                android:layout_width="260dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="false"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
+                android:ems="10"
+                android:hint="@string/notification_frequency"
+                android:inputType="text"
+                android:textSize="@dimen/form_font_size"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/notification_Name" />
+
+            <EditText
+                android:id="@+id/notification_endDate"
+                android:layout_width="260dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="false"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
+                android:ems="10"
+                android:hint="@string/notification_endDate"
                 android:inputType="date"
+                android:textSize="@dimen/form_font_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtFrequency" />
+                app:layout_constraintTop_toBottomOf="@+id/notification_startDate" />
 
             <EditText
-                android:id="@+id/endDate"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="100dp"
-                android:layout_marginRight="100dp"
+                android:id="@+id/notification_startDate"
+                android:layout_width="260dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="false"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
                 android:ems="10"
+                android:hint="@string/notification_startDate"
                 android:inputType="date"
+                android:textSize="@dimen/form_font_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/startDate" />
+                app:layout_constraintTop_toBottomOf="@+id/notification_frequency" />
 
             <EditText
-                android:id="@+id/txtFrequency"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginLeft="100dp"
+                android:id="@+id/notification_msg"
+                android:layout_width="260dp"
+                android:layout_height="50dp"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentLeft="false"
+                android:layout_alignParentTop="false"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="100dp"
-                android:layout_marginRight="100dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@drawable/textview_border"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Frequency"
+                android:hint="@string/notification_msg"
+                android:inputType="text"
+                android:textSize="@dimen/form_font_size"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtIntervals" />
+                app:layout_constraintTop_toBottomOf="@+id/notification_endDate" />
 
-            <EditText
-                android:id="@+id/mlPersonalMsg"
-                android:layout_width="250dp"
-                android:layout_height="94dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="100dp"
-                android:layout_marginRight="100dp"
-                android:ems="10"
-                android:gravity="start|top"
-                android:inputType="textMultiLine"
-                app:layout_constraintEnd_toEndOf="parent"
+            <Button
+                android:id="@+id/notification_btn_save"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="60dp"
+                android:layout_marginLeft="60dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/textview_green_noborder"
+                android:text="@string/notification_btn_save"
+                android:textColor="@color/colorWhite"
+                app:layout_constraintStart_toEndOf="@+id/notification_btn_close"
+                app:layout_constraintTop_toBottomOf="@+id/notification_msg" />
+
+            <Button
+                android:id="@+id/notification_btn_close"
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="48dp"
+                android:layout_marginLeft="48dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="60dp"
+                android:layout_marginRight="60dp"
+                android:background="@drawable/textview_red_noborder"
+                android:text="@string/notification_btn_close"
+                android:textColor="@color/colorWhite"
+                app:layout_constraintEnd_toStartOf="@+id/notification_btn_save"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtSubject" />
+                app:layout_constraintTop_toBottomOf="@+id/notification_msg" />
 
             <EditText
-                android:id="@+id/txtIntervals"
-                android:layout_width="250dp"
-                android:layout_height="64dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="100dp"
-                android:layout_marginRight="100dp"
+                android:id="@+id/notification_createNote"
+                android:layout_width="260dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="60dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginRight="16dp"
+                android:background="@android:color/transparent"
+                android:clickable="false"
+                android:editable="false"
                 android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Intervals"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/txtName" />
-
-            <EditText
-                android:id="@+id/txtName"
-                android:layout_width="250dp"
-                android:layout_height="64dp"
-                android:layout_marginStart="68dp"
-                android:layout_marginLeft="68dp"
-                android:layout_marginTop="48dp"
-                android:layout_marginEnd="70dp"
-                android:layout_marginRight="70dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Name"
+                android:focusable="false"
+                android:focusableInTouchMode="false"
+                android:inputType="none"
+                android:text="@string/notification_heading"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <EditText
-                android:id="@+id/txtSubject"
-                android:layout_width="250dp"
-                android:layout_height="60dp"
-                android:layout_marginStart="100dp"
-                android:layout_marginLeft="100dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="100dp"
-                android:layout_marginRight="100dp"
-                android:ems="10"
-                android:inputType="textPersonName"
-                android:text="Subject"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/endDate" />
-
-            <Button
-                android:id="@+id/notification_btn_save"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="25dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="73dp"
-                android:layout_marginRight="73dp"
-                android:text="Save"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/notification_btn_close"
-                app:layout_constraintTop_toBottomOf="@+id/mlPersonalMsg" />
-
-            <Button
-                android:id="@+id/notification_btn_close"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="73dp"
-                android:layout_marginLeft="73dp"
-                android:layout_marginTop="8dp"
-                android:layout_marginEnd="25dp"
-                android:layout_marginRight="25dp"
-                android:text="Close"
-                app:layout_constraintEnd_toStartOf="@+id/notification_btn_save"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mlPersonalMsg" />
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
 </android.support.constraint.ConstraintLayout>
